Updated a few items on project

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,46 +33,46 @@ endif(MSVC)
 include_directories("src")
 
 if (CMAKE_BUILD_TYPE MATCHES "[Dd][Ee][Bb][Uu][Gg]")
-    set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/debug-lib)
-    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/debug-lib)
-    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/debug-bin)
+    set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib/debug)
+    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib/debug)
+    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/debug)
     if(BUILD_FRAMEWORKS)
-        add_subdirectory("deps/audio"           ./debug-trash/deps-audio)
-        add_subdirectory("src/moon9/audio"      ./debug-trash/audio)
-    ##  add_subdirectory("src/moon9/hub"        ./debug-trash/hub)
-        add_subdirectory("src/moon9/debug"      ./debug-trash/debug)
-        add_subdirectory("src/moon9/hid"        ./debug-trash/hid)
-        add_subdirectory("src/moon9/io"         ./debug-trash/io)
-        add_subdirectory("src/moon9/math"       ./debug-trash/math)
-        add_subdirectory("src/moon9/memtracer"  ./debug-trash/memtracer)
-        add_subdirectory("src/moon9/os"         ./debug-trash/os)
-        add_subdirectory("src/moon9/play"       ./debug-trash/play)
-        add_subdirectory("src/moon9/render"     ./debug-trash/render)
-        add_subdirectory("src/moon9/spatial"    ./debug-trash/spatial)
-        add_subdirectory("src/moon9/string"     ./debug-trash/string)
-        add_subdirectory("src/moon9/test"       ./debug-trash/test)
-        add_subdirectory("src/moon9/time"       ./debug-trash/time)
+        add_subdirectory("deps/audio"           ./.trash/debug/deps-audio)
+        add_subdirectory("src/moon9/audio"      ./.trash/debug/audio)
+    ##  add_subdirectory("src/moon9/hub"        ./.trash/debug/hub)
+        add_subdirectory("src/moon9/debug"      ./.trash/debug/debug)
+        add_subdirectory("src/moon9/hid"        ./.trash/debug/hid)
+        add_subdirectory("src/moon9/io"         ./.trash/debug/io)
+        add_subdirectory("src/moon9/math"       ./.trash/debug/math)
+        add_subdirectory("src/moon9/memtracer"  ./.trash/debug/memtracer)
+        add_subdirectory("src/moon9/os"         ./.trash/debug/os)
+        add_subdirectory("src/moon9/play"       ./.trash/debug/play)
+        add_subdirectory("src/moon9/render"     ./.trash/debug/render)
+        add_subdirectory("src/moon9/spatial"    ./.trash/debug/spatial)
+        add_subdirectory("src/moon9/string"     ./.trash/debug/string)
+        add_subdirectory("src/moon9/test"       ./.trash/debug/test)
+        add_subdirectory("src/moon9/time"       ./.trash/debug/time)
     endif()
 else()
-    set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/release-lib)
-    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/release-lib)
-    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/release-bin)
+    set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib/release)
+    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib/release)
+    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/release)
     if(BUILD_FRAMEWORKS)
-        add_subdirectory("deps/audio"           ./release-trash/deps-audio)
-        add_subdirectory("src/moon9/audio"      ./release-trash/audio)
-    ##  add_subdirectory("src/moon9/hub"        ./release-trash/hub)
-        add_subdirectory("src/moon9/debug"      ./release-trash/debug)
-        add_subdirectory("src/moon9/hid"        ./release-trash/hid)
-        add_subdirectory("src/moon9/io"         ./release-trash/io)
-        add_subdirectory("src/moon9/math"       ./release-trash/math)
-        add_subdirectory("src/moon9/memtracer"  ./release-trash/memtracer)
-        add_subdirectory("src/moon9/os"         ./release-trash/os)
-        add_subdirectory("src/moon9/play"       ./release-trash/play)
-        add_subdirectory("src/moon9/render"     ./release-trash/render)
-        add_subdirectory("src/moon9/spatial"    ./release-trash/spatial)
-        add_subdirectory("src/moon9/string"     ./release-trash/string)
-        add_subdirectory("src/moon9/test"       ./release-trash/test)
-        add_subdirectory("src/moon9/time"       ./release-trash/time)
+        add_subdirectory("deps/audio"           ./.trash/release/deps-audio)
+        add_subdirectory("src/moon9/audio"      ./.trash/release/audio)
+    ##  add_subdirectory("src/moon9/hub"        ./.trash/release/hub)
+        add_subdirectory("src/moon9/debug"      ./.trash/release/debug)
+        add_subdirectory("src/moon9/hid"        ./.trash/release/hid)
+        add_subdirectory("src/moon9/io"         ./.trash/release/io)
+        add_subdirectory("src/moon9/math"       ./.trash/release/math)
+        add_subdirectory("src/moon9/memtracer"  ./.trash/release/memtracer)
+        add_subdirectory("src/moon9/os"         ./.trash/release/os)
+        add_subdirectory("src/moon9/play"       ./.trash/release/play)
+        add_subdirectory("src/moon9/render"     ./.trash/release/render)
+        add_subdirectory("src/moon9/spatial"    ./.trash/release/spatial)
+        add_subdirectory("src/moon9/string"     ./.trash/release/string)
+        add_subdirectory("src/moon9/test"       ./.trash/release/test)
+        add_subdirectory("src/moon9/time"       ./.trash/release/time)
     endif()
 endif()
 
